fixed layout issue in small viewport, added <a> header with associated id to footer

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html {
     font-family: 'Gabarito', serif;
     /* border:  1px solid red; */
     /* outline: 2px solid rgb(73, 179, 46) !important; */
-    /* background-color: rgb(0 100 0 / 0.1) !important; */
+    background-color: rgb(0 100 0 / 0.1) !important;
   }
 
   body { 
@@ -23,6 +23,7 @@ html {
 /* main Container setup */
 #main { 
 display: grid;
+
 }
 
 /* .blob-fam { 
@@ -64,7 +65,7 @@ height: 100vh;
 }
 a {  
 text-decoration: none;
-padding-left: 3em;
+padding-left: 2em;
 } 
 
 #mid-Container { 
@@ -82,9 +83,10 @@ max-width: 100%; */
 }
 
 .profilePic img{ 
-width: 100%;
+  max-height: 400px;
+width: 85%;
 border-radius: 50%;
-height: 20em;
+height: auto;
 -webkit-box-shadow: 12px 8px 14px 2px rgba(0,0,0,0.71); 
 box-shadow: 12px 8px 14px 2px rgba(0,0,0,0.71);
 }
@@ -144,20 +146,22 @@ grid-row: auto;
   display: flex;
  align-items: center;
   margin-top: 15em;
-  justify-content: space-around;
+  justify-content: space-evenly;
   line-height: 2em;
   width: 100%;
- 
+ gap: 2em;
 }
 
-.bottom-description { 
+.bottom-description{ 
   width: 100%;
   padding-right: 13%;
   min-width: 400px;
   max-width: 40%;
-
+  /* margin: 0 auto; */
 }
-
+.bottom-description > p {
+  margin: 0 auto;
+}
 
 .footerPic img {
 max-width: 400px;  
@@ -233,7 +237,6 @@ box-shadow:-16px 8px 30px 1px rgba(0,0,0,0.71);
   grid-column: 1 / 2 span;
   grid-row: auto;
   display: flex;
-
   justify-content: center;
   margin-top: 8em;
   text-align: center;
@@ -242,6 +245,7 @@ box-shadow:-16px 8px 30px 1px rgba(0,0,0,0.71);
 .list-lang { 
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .bot-lang p:nth-child(1) { 
@@ -258,6 +262,8 @@ box-shadow:-16px 8px 30px 1px rgba(0,0,0,0.71);
 
 
  @media screen and (max-width: 768px) {
+
+  
   #mid-Container {
     display: flex;
     flex-wrap: wrap;
@@ -272,14 +278,19 @@ box-shadow:-16px 8px 30px 1px rgba(0,0,0,0.71);
 
   #footer-container { 
     display: flex;  
-    align-content: center;
-    padding: 3%;
-    display: block;
+    justify-content: center;
+    /* padding: 3%; */
     text-align: center;
+  flex-wrap: wrap;
+  flex: 2;
   } 
-  .footerPic img {
+
+  .bottom-description { 
+    padding: 3%;
+  }
+  /* .footerPic img {
     margin-bottom: 20%;
   }
-}
+} */
 
 
